Normalize css and basic index html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!--Testing commit push-->
+<!-- -->
+<!--============================================================
+// Student Number: S10208460, S10208266
+// Student Name: CHNG BOON CHONG, MUHAMMAD DANDARAWIE BIN ROHANI
+// Module  Group: T04
+// In Deep Thought
+//============================================================-->
+
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Covid Learning Website</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+
+  <body>
+
+        <!--All scripts below here -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  </body>
+</html>
