fully responsive lottie and background section

--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Covid Learning Website</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <lottie-player
-    autoplay
-    mode="normal"
-    background="#5503AB"  
-    speed="1"  
-    style="width: 1920px; height: 1080px;"
-    >
-    </lottie-player>
+    <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
 
 
   <body>
+    <section class="the_lottie">    
+      <lottie-player
+      autoplay
+      mode="normal"
+      background="#5503AB"  
+      speed="1"  
+      style="width: 100%; height: 100%;"
+      >
+      </lottie-player>
+    </section>
 
         <!--All scripts below here -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
