navbar and singapore cont responsive

--- a/secondpage.html
+++ b/secondpage.html
@@ -16,9 +16,28 @@
 
   <body>
 
-    <div class = "Facts" id = "Facts_id">
-        <h1>Covid-19 Singapore Status</h1>
+
+
+      <nav class="nav_bar" id="nav_id">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="thirdpage.html">Info</a></li>
+          <li><a href="fourthpage.html">Quiz</a></li>
+          </ul>
+      </nav>
+
+
+
+
+
+    <div class="container">
+      <img src="images/singapore_2.jpg" class="singapore_image">
+      <div class="top-left">Covid-19 in <br>Singapore</div>
+
     </div>
+
+
+
 
     <form class="fact_form" id ="fact_form_id">
 
@@ -59,10 +78,13 @@
     </div>
 
     <section class="background_info">
+
       <div class="Info">
         <img src="images/background_image.jpg" class="background_image">
       </div>
+
     <div class = "Info" id = "Info_id">
+
       <p>According to the latest information from the website disease.sh,
         it is reported that there are around 81 MILLION cases of people<br>
         infected with covid-19 so far as of 2nd of february 2021. With the
@@ -73,7 +95,9 @@
         regarding Covid-19, the possible origins, how it spreads, how it is being
         treated, how to prevent and so on!
       </p>
+
       <br>
+
     </div>
 
   </section>
