Probability of infections responsive

--- a/secondpage.html
+++ b/secondpage.html
@@ -88,9 +88,15 @@
 
 
           <!--Third Section-->
+          <div class="background_header">
+            <h1>Chances Of Infections & Infected Today</h1>
+          </div>
           <div class= "fact_chance" id ="fact_chance_id">
+            <div class="chance_section">
+              <img src="images/chance_1.jpg" class="chance_image">
+            </div>
             <ul class="fact_ul_chance" id="fact_id_chance">
-              
+              <h1></h1>
             </ul>
           </div>
     
