Start on second page

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -11,10 +11,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Covid Learning Website</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="thirdpage.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
+
+    <nav class="nav_bar" id="nav_id">
+      <ul>
+        <li><a href="secondpage.html">Home</a></li>
+        <li><a href="thirdpage.html">Info</a></li>
+        <li><a href="fourthpage.html">Quiz</a></li>
+        </ul>
+    </nav>
+
+    <div class="parallax">
+
+      <div class="container">
+        <div class="top-left">Information about <br>Covid-19 <br>|Scroll Down|</div>
+  
+      </div>
+
+
+
+
       <div class="covid_intro" id="intro_id">
 
       </div>
