covid intro responsive

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -34,9 +34,32 @@
 
 
 
-      <div class="covid_intro" id="intro_id">
+        <div class="background_header">
+          <h1>Cases & Current Infection</h1>
+        </div>
 
+        <!--background_info-->
+        <section class="covid_intro" id="intro_id">
+
+          <!--info & background_image-->
+        <div class="info_intro">
+          <img src="images/earth_1.jpg" class="earth_1_image">
+        </div>
+
+  <!--Info, Info_id-->
+      <div class = "info_intro" id = "info_intro_id">
+
+        <p>Unfortunately, it is unknown when the case started. However, around 2019 of
+          December, it was identified in Wuhan China. As of January 2020, the World Health Organisation
+          declared the outbreak as an international concern. The newly discovered virus is known
+          as a severe acute respiratory syndrome coronavirus 2, also known as covid-19.
+        </p>
+  
+        <br>
+  
       </div>
+
+    </section>
 
       <div class="covid_origins" id="origins_id">
 
