covid-19 preventions responsive

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -143,10 +143,34 @@
       </section>
 
 
-
-      <div class="covid_prevention" id="prevention_id">
-
+      <div class="background_header">
+        <h1>Covid-19 Preventions</h1>
       </div>
+
+      <!--background_info-->  
+      <section class="covid_prevention" id="prevention_id">
+                       <!--info & background_image-->
+                       <div class="info_prevention">
+                        <img src="images/prevention_1.jpg" class="prevention_1_image">
+                      </div>  
+          <!--Info, Info_id-->
+          <div class = "info_prevention" id = "info_prevention_id">
+
+            <p>According to the article written by the World Health Organisation, to prevent the
+              spread of Covid-19, it is best to:
+              <br>Wash hands with soap often
+              <br>Maintain Safe Distancing
+              <br>Wear A Mask
+              <br>Prevent touching of Eyes,Nose,Nouth,
+              <br>Cover nose and mouth with tissue when coughing or sneezing
+              <br>Stay home if unwell
+              <br>Seek medical attention if fever,coughing or difficulty breathing
+            </p>
+      
+            <br>
+      
+          </div>
+      </section>
 
       <div class="quiz_contain" id="quiz_contain_id">
         <button class="the_button_quiz" id="submit_button_quiz">Learn More</button>
