button for thirdpage plus fixed

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -172,7 +172,7 @@
           </div>
       </section>
 
-      <div class="quiz_contain" id="quiz_contain_id">
+      <div class="background_header" id="quiz_contain_id">
         <button class="the_button_quiz" id="submit_button_quiz">Learn More</button>
       </div>
 
