quiz page added

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -173,7 +173,7 @@
       </section>
 
       <div class="background_header" id="quiz_contain_id">
-        <button class="the_button_quiz" id="submit_button_quiz">Learn More</button>
+        <button class="the_button_quiz" id="submit_button_quiz">Quiz</button>
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
