--- a/fourthpage.html
+++ b/fourthpage.html
@@ -11,11 +11,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Covid Learning Website</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="fourthpage.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-<h1>Quiz here!</h1>
+
+    <nav class="nav_bar" id="nav_id">
+      <ul>
+        <li><a href="secondpage.html">Home</a></li>
+        <li><a href="thirdpage.html">Info</a></li>
+        <li><a href="fourthpage.html">Quiz</a></li>
+        </ul>
+    </nav>
+    
+    
+    <div id="quiz"></div>
+    <div class="theName" id="name">
+        <h1>Name<h1>
+        <input type="text" id="contact-name" class="form-control" required>
+    </div>>
+          <div class="background_header" id="quiz_contain_id">
+    <button id="submit">Get Results</button>
+            </div>      
+    <div id="results"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
