Added restDB POST and GET functions, scoreboard

--- a/fourthpage.html
+++ b/fourthpage.html
@@ -39,8 +39,19 @@
       <button id="submit">Get Results</button>
               </div>      
       <div id="results"></div>
+      
+      <!-- Scoreboard -->
+      <h2>Scoreboard History</h2>
+      <table class="table" id="scoreboard-list">
+        <thead>
+          <th>Name</th>
+          <th>Score</th>   
+        </thead>
+
+        <tbody><!-- Information from API in here --></tbody>
+      </table>
   
-      </div>
+    </div>
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
